environments/stgn/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: stone-teste-api-service-stgn
  namespace: stone-teste-api-stgn
spec:
  selector:
    app: stone-teste-api-stgn
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
