environments/stgn/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stone-teste-api-ingress-stgn
  namespace: stone-teste-api-stgn
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api-stgn
            pathType: Prefix
            backend:
              service:
                name: stone-teste-api-service-stgn
                port:
                  number: 80
          - path: /api-stgn/namespaces
            pathType: Prefix
            backend:
              service:
                name: stone-teste-api-service-stgn
                port:
                  number: 80
          - path: /teste
            pathType: Prefix
            backend:
              service:
                name: stone-teste-api-service-stgn
                port:
                  number: 80
